data/derived/sp14/progs/unify/prog2081.ml.out
Characters 124-139:
  if ((List.length acc) = (List.length(List.combine(padZero l1 l2))-1))
                                                   ^^^^^^^^^^^^^^^
Error: This expression has type int list * int list
       but an expression was expected of type 'a list
